WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279519
hyphens-vs-float-clearance-002.html fails only in Safari / WebKit
https://bugs.webkit.org/show_bug.cgi?id=279519
Summary
hyphens-vs-float-clearance-002.html fails only in Safari / WebKit
Ahmad Saleem
Reported
2024-09-11 10:03:11 PDT
HI Team, Just raising bug to track this browser specific failure for future. WPT Test Case:
https://wpt.fyi/results/css/css-text/hyphens/hyphens-vs-float-clearance-002.html?label=master&label=experimental&aligned&q=hyphens
WPT Test Case Live Link:
http://wpt.live/css/css-text/hyphens/hyphens-vs-float-clearance-002.html
Web Spec:
https://drafts.csswg.org/css-text-3/#hyphens-propert
(
https://drafts.csswg.org/css-text-3/#hyphenation
) Thanks!
Attachments
Screenshot with the fix applied
(307.14 KB, image/png)
2024-09-11 20:27 PDT
,
alan
no flags
Details
Screenshot with the fix applied
(136.88 KB, image/png)
2024-09-11 20:35 PDT
,
alan
no flags
Details
[fast-cq]Patch
(17.71 KB, patch)
2024-09-13 20:51 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-09-11 20:27:42 PDT
Created
attachment 472533
[details]
Screenshot with the fix applied InlineFormattingUtils::inlineItemWidth needs to include the trailing hyphen so that content breaking sees the candidate content's full width. Have a local fix (see screenshot). Will post a PR tomorrow.
alan
Comment 2
2024-09-11 20:35:22 PDT
Created
attachment 472534
[details]
Screenshot with the fix applied
alan
Comment 3
2024-09-13 20:51:26 PDT
Created
attachment 472554
[details]
[fast-cq]Patch
EWS
Comment 4
2024-09-15 05:34:47 PDT
Committed
283680@main
(da9c861d1d58): <
https://commits.webkit.org/283680@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472554
[details]
.
Radar WebKit Bug Importer
Comment 5
2024-09-15 05:35:22 PDT
<
rdar://problem/136033523
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug