[IFC] hyphens-vs-float-clearance-002.html fails only in Safari / WebKit https://bugs.webkit.org/show_bug.cgi?id=279519

Reviewed by Antti Koivisto.

ContinuousContent (input to line breaking) logical width should include the trailing soft hyphen
(so that we can figure out if the soft hyphen overflows the available space and break instead of letting it overflow).

* LayoutTests/TestExpectations:
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::tryBreakingTextRun const):
(WebCore::Layout::InlineContentBreaker::tryHyphenationAcrossOverflowingInlineTextItems const):
(WebCore::Layout::InlineContentBreaker::processOverflowingContentWithText const):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::setTrailingSoftHyphenWidth):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::reset):
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.h:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::hasTrailingSoftHyphen const):
* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):
(WebCore::Layout::Line::appendTextFast):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineCandidate::InlineContent::setTrailingSoftHyphenWidth):
(WebCore::Layout::LineCandidate::InlineContent::appendInlineItem):
(WebCore::Layout::LineCandidate::InlineContent::reset):
(WebCore::Layout::LineBuilder::candidateContentForLine):
(WebCore::Layout::LineCandidate::InlineContent::appendTrailingLineBreak): Deleted.
(WebCore::Layout::LineCandidate::InlineContent::appendtrailingWordBreakOpportunity): Deleted.
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::hyphenWidth):
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.h:

Canonical link: https://commits.webkit.org/283680@main